syntax = "proto3";

option go_package = "github.com/fran96/restaurant-go/contracts/WaiterProto";

package WaiterProto;


message OrderRequest {
    string id = 1;
    repeated string listOfFood = 2;
    repeated string listOfDrinks = 3;
    int64 tableNumber = 4;
}

message OrderAcknowledged {
    int64 orderID = 1;
}

service WaiterService{
    rpc Order(OrderRequest) returns (OrderAcknowledged);
}
